--- a/s2.md
+++ b/s2.md
@@ -1,8 +1,12 @@
-Toto je zkušební stránka
+# Blog Czech Space Office
 
-Může obsahovat libovolný text i obrázky.
+*Praha, 15. února 2006 - Česká kosmická kancelář*
 
-Praha, 15. února 2006 - Česká kosmická kancelář, International School of Prague a Velvyslanectví Spojených států amerických v České republice si Vás dovolují pozvat na setkání s astronautem Markem Polanskym. Mark Polansky (49) je členem oddílu amerických astronautů od roku 1996. Svůj první kosmický let uskutečnil od 7. do 20. února 2001 jako pilot (tedy zástupce velitele) raketoplánu Atlantis, který k Mezinárodní kosmické stanici (International Space Station) dopravil výzkumnou laboratoř Destiny. Mark Polansky se nyní intenzivně připravuje ke svému druhému kosmickému letu: na podzim 2006 by měl být velitelem sedmičlenné posádky raketoplánu Endeavour (v níž budou mj. dva evropští kosmonauti: Christer Fuglesang ze Švédska a Thomas Reiter z Německa). Raketoplán Endeavour má pod vedením Marka Polanského dopravit na stanici ISS část „páteře“ kosmické stanice (příhradového nosníku, který bude mít po dokončení délku 90 metrů). Setkání zástupců médií s Markem Polanskym se bude konat v úterý 28. února 2006 od 15:30 hod v Kulturním centru Velvyslanectví USA (Tržiště 13, Praha 1). Setkání bude trvat 40 minut (přivítání, představení astronauta Marka Polanského, jeho osobní vystoupení plus odpovědi na dotazy), následovat bude možnost individuálních rozhovorů. Vzhledem k omezeným časovým možnostem je nutné všechny žádosti o samostatné rozhovory domluvit předem na uvedených kontaktech.
+International School of Prague a Velvyslanectví Spojených států amerických v České republice si Vás dovolují pozvat na setkání s astronautem Markem Polanskym. Mark Polansky (49) je členem oddílu amerických astronautů od roku 1996. Svůj první kosmický let uskutečnil od 7. do 20. února 2001 jako pilot (tedy zástupce velitele) raketoplánu Atlantis, který k Mezinárodní kosmické stanici (International Space Station) dopravil výzkumnou laboratoř Destiny. Mark Polansky se nyní intenzivně připravuje ke svému druhému kosmickému letu: na podzim 2006 by měl být velitelem sedmičlenné posádky raketoplánu Endeavour (v níž budou mj. dva evropští kosmonauti: Christer Fuglesang ze Švédska a Thomas Reiter z Německa). Raketoplán Endeavour má pod vedením Marka Polanského dopravit na stanici ISS část „páteře“ kosmické stanice (příhradového nosníku, který bude mít po dokončení délku 90 metrů). Setkání zástupců médií s Markem Polanskym se bude konat v úterý 28. února 2006 od 15:30 hod v Kulturním centru Velvyslanectví USA (Tržiště 13, Praha 1). Setkání bude trvat 40 minut (přivítání, představení astronauta Marka Polanského, jeho osobní vystoupení plus odpovědi na dotazy), následovat bude možnost individuálních rozhovorů. Vzhledem k omezeným časovým možnostem je nutné všechny žádosti o samostatné rozhovory domluvit předem na uvedených kontaktech.
 
 https://github.com/czechspace/blog/blob/main/content/2005-12-28.start-giove/_1.first_galileo_iov_satellite-1000x700.jpg?raw=true
+
+
+
+
 
